Test: semgrep agent pool

--- a/pipelines/semgrep-scan-az-trigger/semgrep.yaml
+++ b/pipelines/semgrep-scan-az-trigger/semgrep.yaml
@@ -1,3 +1,6 @@
+pool:
+  name: semgrep-pipeline-agent-pool
+
 trigger: none
 
 parameters:
@@ -29,8 +32,6 @@ parameters:
 
 stages:
   - stage: Semgrep
-    pool:
-      vmImage: "ubuntu-latest"
     variables:
       - group: semgrep-pipeline-vg
       - name: scanTargetPath
