--- a/pipelines/semgrep-scan-az-trigger/semgrep.yaml
+++ b/pipelines/semgrep-scan-az-trigger/semgrep.yaml
@@ -89,7 +89,7 @@ stages:
             displayName: "Use Python 3.11"
 
           - script: |
-              python -m pip install --upgrade pip
+              python3.11 -m pip install --upgrade pip
               pip install --user pipenv
               pipenv install --ignore-pipfile
             displayName: "Install Python Dependencies"
