--- a/pipelines/semgrep-scan-az-trigger/semgrep.yaml
+++ b/pipelines/semgrep-scan-az-trigger/semgrep.yaml
@@ -44,6 +44,9 @@ stages:
         value: semgrep-pipelines
       - name: scanningRepositoryPath
         value: $(Agent.BuildDirectory)/$(scanningRepositoryName)
+      - name: PATH
+        value: /root/.local/bin:$(PATH)
+
     jobs:
       - job:
         displayName: Semgrep Diff Scan
