--- a/pipelines/semgrep-scan-az-trigger/semgrep.yaml
+++ b/pipelines/semgrep-scan-az-trigger/semgrep.yaml
@@ -91,7 +91,7 @@ stages:
 
           - script: |
               python3.11 -m pip install --upgrade pip
-              pip install --user pipenv
+              pip install --user pipenv semgrep
               /root/.local/bin/pipenv install --ignore-pipfile
             displayName: "Install Python Dependencies"
             workingDirectory: $(scanningRepositoryPath)/scanning
