--- a/pipelines/semgrep-scan-az-trigger/semgrep.yaml
+++ b/pipelines/semgrep-scan-az-trigger/semgrep.yaml
@@ -1,5 +1,5 @@
 pool:
-  vmImage: "ubuntu-latest"
+  name: semgrep-pipeline-agent-pool
 
 trigger: none
 
@@ -91,7 +91,7 @@ stages:
 
           - script: |
               python3.11 -m pip install --upgrade pip
-              pip install --user pipenv semgrep
+              python3.11 -m pip install pipenv semgrep
               semgrep --version
               /root/.local/bin/pipenv install --ignore-pipfile
             displayName: "Install Python Dependencies"
