--- a/pipelines/full-scans/semgrep.yaml
+++ b/pipelines/full-scans/semgrep.yaml
@@ -92,8 +92,8 @@ stages:
             displayName: "Use Python 3.11"
 
           - script: |
-              python -m pip install --upgrade pip
-              pip install --user pipenv
+              python3.11 -m pip install --upgrade pip
+              python3.11 -m pip install pipenv semgrep
               pipenv install --ignore-pipfile
             displayName: "Install Python Dependencies"
             workingDirectory: $(scanningRepositoryPath)/scanning
