update the included projects

--- a/full-scans/configuration/full-scan-config.yaml
+++ b/full-scans/configuration/full-scan-config.yaml
@@ -25,5 +25,5 @@
 overrides: []
 includedRepositories: []
 excludedRepositories: []
-includedProjects: []
+includedProjects: ["GNRM_PromoAI_Pricing", "Commercial_IT"]
 excludedProjects: []
