--- a/full-scans/configuration/full-scan-config.yaml
+++ b/full-scans/configuration/full-scan-config.yaml
@@ -25,5 +25,5 @@
 overrides: []
 includedRepositories: "*"
 excludedRepositories: []
-includedProjects: "*"
+includedProjects: ["Commercial_IT", "GNRM_PromoAI_Pricing"]
 excludedProjects: []
