--- a/pipelines/full-scans/schedule.yaml
+++ b/pipelines/full-scans/schedule.yaml
@@ -13,8 +13,8 @@ schedules:
 
 resources:
   pipelines:
-    - pipeline: configuration
-      source: configuration
+    - pipeline: semgrep-configuration
+      source: semgrep-configuration
 
 stages:
   - stage:
