--- a/pipelines/full-scans/schedule.yaml
+++ b/pipelines/full-scans/schedule.yaml
@@ -62,7 +62,7 @@ stages:
               ADO_ORG_URL: $(ADO_ORG_URL)
               AZURE_TOKEN: $(AZURE_TOKEN)
               FULL_SCAN_RESULTS_OUTPUT_PATH: $(fullScanResultsOutputPath)
-              FULL_SCAN_SCHEDULE_PATH: $(Pipeline.Workspace)/configuration/$(fullScanScheduleArtifactName)/schedule.yaml
+              FULL_SCAN_SCHEDULE_PATH: $(Pipeline.Workspace)/semgrep-configuration/$(fullScanScheduleArtifactName)/schedule.yaml
               SCAN_PIPELINE_PROJECT_ID: $(SCAN_PIPELINE_PROJECT_ID)
               SCAN_PIPELINE_ID: $(SCAN_PIPELINE_ID)
               INTERVAL_IN_MINUTES: $(intervalInMinutes)
