--- a/pipelines/full-scans/semgrep.yaml
+++ b/pipelines/full-scans/semgrep.yaml
@@ -78,6 +78,8 @@ stages:
               fi
               echo "Fetching latest commit ID for default branch ${{ parameters.defaultBranch }}"
               LATEST_COMMIT_ID=$(git ls-remote ${{ parameters.repositoryRemoteUrl }} ${{ parameters.defaultBranch }} | awk '{print $1}')
+              echo "Latest commit ID: $LATEST_COMMIT_ID"
+              echo $LATEST_COMMIT_ID > latest_commit_id.txt
 
               echo "Checking out default branch ${{ parameters.defaultBranch }}"
               git fetch --force --tags --prune --prune-tags --progress --no-recurse-submodules origin --depth=1  +${{ parameters.defaultBranch }}:refs/remotes/origin/main
@@ -102,6 +104,7 @@ stages:
             workingDirectory: $(scanningRepositoryPath)/scanning
 
           - script: |
+              LATEST_COMMIT_ID=$(cat latest_commit_id.txt)
               pipenv run python src/semgrep_scan.py
             displayName: "Run Semgrep Scan"
             workingDirectory: $(scanningRepositoryPath)/scanning
